# CloudsStitcher

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/simple_stitcher/: CMakeLists.txt  main.cpp
cstitcher/: CMakeLists.txt
cstitcher/include/common/: Camera.h  PointCloud.h  PoseRT.h
cstitcher/include/system/: log.h
cstitcher/src/common/: Camera.cpp  PointCloud.cpp  PoseRT.cpp
testdata/: clouds.list  extrinsics.yml  intrinsics_ios_vga.yml  intrinsics_ss.yml  pose_00030.yml  pose_00031.yml  pose_00032.yml  pose_00033.yml  pose_00034.yml  pose_00035.yml  pose_00036.yml  pose_00037.yml  pose_00038.yml  pose_00039.yml
unit_tests/: CMakeLists.txt  Camera_test.cpp  PointCloud.cpp  PoseRT_test.cpp
